--- a/pythoncodes/Numpy.ipynb
+++ b/pythoncodes/Numpy.ipynb
@@ -2,52 +2,61 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "8d752b1b",
+   "execution_count": 3,
+   "id": "c7eec965",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "f  =5\n",
-    "f"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "fb1d669f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "r = 4\n",
-    "r"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a08269e",
+   "id": "f7e4bc4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  2, 23, 33, 45])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([1,2,23,33,45,]) # calling array\n",
+    "a\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a25366cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7636c5ec",
    "metadata": {},
    "outputs": [],
    "source": []
